minor intor-heading tweak to prevent breaking on small screens

--- a/css/expo.css
+++ b/css/expo.css
@@ -11,9 +11,9 @@ header .intro-text {
 
 header .intro-text .intro-heading {
     font-weight: 600;
-    font-size: 25px;
+    font-size: 22px;
     line-height: 30px;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
     letter-spacing: -1px;
 }
 
